# uhoo-homeassistant

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  hacs.json  info.md  pyproject.toml  setup.cfg
.devcontainer/: configuration.yaml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  cron.yaml  pre-commit-autoupdate.yaml  pull.yml  push.yml
custom_components/: __init__.py
custom_components/uhoo/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/uhoo/translations/: en.json
tests/: __init__.py  conftest.py  const.py  test_api.py  test_config_flow.py  test_init.py  test_sensor.py  test_switch.py
